# leads-scrapper

./: .env.example  .gitignore  .mise.toml  CLAUDE.md  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  vercel.json
.claude/: settings.local.json
app/: page.tsx
components/: add-to-radar-button.tsx  header.tsx  notes-panel.tsx
docs/: CHANGELOG.md  INFO_POR_EMPRESA.md  QA.md  SETUP.md
lib/: auth.ts  env.ts  scoring.ts  (+1 more)
scrapers/: README.md  pyproject.toml
scrapers/scripts/: credit_status.py  seed_super_admin.py  seed_universe_master.py
scrapers/src/leads_scrapper/: __init__.py  config.py
scrapers/src/leads_scrapper/clients/: anthropic_client.py  apollo.py  http.py  resend_client.py  supabase_client.py
scrapers/src/leads_scrapper/jobs/: __init__.py  apollo_sync.py  enrich_pending.py  generate_briefs.py  generate_briefs_batch.py  scrape_bo.py  scrape_news.py  send_alerts.py  test_email.py
scrapers/src/leads_scrapper/models/: __init__.py  apollo.py  canonical.py
scrapers/src/leads_scrapper/repositories/: __init__.py  companies_repo.py
scrapers/src/leads_scrapper/scrapers/: __init__.py  bo_nacional.py  google_news.py
scrapers/src/leads_scrapper/services/: __init__.py  budget_guardrail.py
scrapers/src/leads_scrapper/utils/: __init__.py  industry_filter.py  logging.py
scrapers/tests/: conftest.py  test_smoke.py
scrapers/tests/clients/: test_apollo.py  test_http.py  test_stubs.py
scrapers/tests/models/: test_canonical.py
scrapers/tests/services/: test_budget_guardrail.py
scrapers/tests/utils/: test_logging.py
(+121 files in other folders)
